<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_regular" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/roboto_regular" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_regular_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/roboto_regular_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_regular_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/roboto_regular_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_regular_bold_italic"
        android:textStyle="bold|italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/roboto_regular_bold_italic"
        android:textStyle="bold|italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/roboto_light" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/roboto_light_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/roboto_light_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/roboto_light_bold_italic"
        android:textStyle="bold|italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/roboto_medium" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/roboto_medium_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/roboto_medium_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/roboto_medium_bold_italic"
        android:textStyle="bold|italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/roboto_condensed" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/roboto_condensed_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/roboto_condensed_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/roboto_condensed_bold_italic"
        android:textStyle="bold|italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/roboto_condensed_light" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/roboto_condensed_light_bold"
        android:textStyle="bold" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/roboto_condensed_light_italic"
        android:textStyle="italic" />

    <io.doist.material.widget.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/roboto_condensed_light_bold_italic"
        android:textStyle="bold|italic" />

</merge>
